--- a/hep-th-9407157/hep-th-9407157.tex
+++ b/hep-th-9407157/hep-th-9407157.tex
@@ -24,6 +24,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
@@ -62,7 +63,7 @@ from the Liouville equation with a simple Lindblad's type generator that
 describes coupling between a quantum particle and a classical, continuous,
 medium of two--state detectors. Piecewise deterministic random process
 (PDP) corresponding to the Liouville equation is derived. The process
-consists of pairs $(classical\, event, quantum\, jump)$, interspersed with
+consists of pairs ({\it classical event}, {\it quantum jump}), interspersed with
 random periods of continuous (in general, non--linear)
 Schr\"odinger's--type evolution. The classical events are flips of the
 detectors--they account for tracks. Quantum jumps are shown, in the
